memory: log the day's units, runtime log file, scan decoder, GPU state
- overhaul-plan: port-kill rewrite, manifest cleanup, electron 44,
  merge-import prune, file log + scanner fallback; quarantine timings.
- runtime-log-file (new): where the app writes logs and how to read them
  instead of asking for pastes.
- scan-decoder-lambda (new): scans are decoded by fribbels' Lambda; new
  heroes come back nameless; no local decoder exists in this repo or Rex's.
- gpu-backend-successor: this machine has no OpenCL loader (Intel HD 4600
  only), so the GPU path is off and a successor buys nothing here.
- repo-lineage: the "use local cache" toggle short-circuits the Rex fetch.
- log-control: E7_MAIN_LOG_LEVEL is gone.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>